--- a/public/style.css
+++ b/public/style.css
@@ -630,6 +630,19 @@ footer {
   flex-direction: row;
   width: 100%;
   gap: 6px;
+  position: relative;
+}
+.content-all .select-zone .add-card .cache-clic {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 21;
+  display: none;
+}
+.content-all .select-zone .add-card .cache-clic.show-cache {
+  display: block;
 }
 .content-all .select-zone .add-card .searchBar {
   width: 80%;
@@ -687,6 +700,13 @@ footer {
 }
 .content-all .select-zone .bouton-retour:hover {
   background-color: #4CC9FF;
+}
+.content-all .select-zone .bouton-retour.disabled {
+  filter: grayscale(90%);
+  cursor: default;
+}
+.content-all .select-zone .bouton-retour.disabled:hover {
+  filter: grayscale(90%);
 }
 .content-all .select-zone .align-both {
   width: 34px;
